--- a/main.css
+++ b/main.css
@@ -1,167 +1,236 @@
+
 .nav-item blogSite{
-    font-size: small;
+  font-size: small;
 }
 
 .nav-link{
-  color: black;
+color: black;
 }
 .navbar-brand{
-  color: #000000;
+color: #000000;
 }
 .mainBackground{
-  background-image: url('Pictures/backgroundStart.jpg');
-    background-size: cover;
-    height: 100vh;
-    padding:0;
-    margin:0;
+background-image: url('Pictures/backgroundStart.jpg');
+  background-size: cover;
+  height: 100vh;
+  padding:0;
+  margin:0;
 }
 .dropdown {
-    display: inline-block;
-    position: relative;
-  }
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    width: 150px;
-    overflow: auto;
-    background-color: #ffffff;
-  }
-
-  .flower{
-    height: 75px;
-  }
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  .dropdown-content a {
-    display: block;
-    color: #000000;
-    padding: 5px;
-    text-decoration: none;
-  }
-  .dropdown-content a:hover {
-    color: #FFFFFF;
-    background-color: #febeb8;
-  }
-
-  ul{
-      list-style: none;
-  }
-  img{
-    height: 25px;
-    width: auto;
-}
-body{
-    font-family: 'Times New Roman', Times, serif;
-}
-.title{  
-  margin-left: 550px;
-  padding-bottom: 30px;
-  text-align: center;
-  color: rgb(0, 0, 0);
-}
-.titleText{
-  width: 400px;
-  text-align: center;
-
-  font-weight: bold;
-  font-size: 100px;
-}
-.startDescription{
-  color: rgb(0, 0, 0);
-  margin-top: 25px;
-  margin-left: 550px;
-  width: 400px;
-  text-align: center;
-}
-
-.startDescriptionText{
-  border-top-width: 5px;
-  border-top-color: #f1b0aa;
-  border-top-style: solid;
-  padding: 30px;
-  font-size: large;
-}
-
-.banner{
-  background-image: url('/Pictures/backgroundStart.jpg');
-  padding: 60px;
-  text-align: center;
-  color: black;
-  font-size: 30px;
-}
-
-.bb{
-  border-radius: 8px;
-  background-color: #343a40;
-  border: none;
-  color: black;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
   display: inline-block;
-  margin-left: 550px;
-  font-size: 16px;
-  margin: 4px 2px;
+  position: relative;
 }
-a{
-  color: white;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  width: 150px;
+  overflow: auto;
+  background-color: #ffffff;
 }
 
-a:hover{
-  color: #adadad;
+.flower{
+  height: 75px;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown-content a {
+  display: block;
+  color: #000000;
+  padding: 5px;
+  text-decoration: none;
+}
+.dropdown-content a:hover {
+  color: #FFFFFF;
+  background-color: #febeb8;
 }
 
 ul{
-  list-style-type: disc;
+    list-style: none;
+}
+img{
+  height: 25px;
+  width: auto;
+}
+body{
+  font-family: 'Times New Roman', Times, serif;
+}
+.title{  
+margin-left: 550px;
+padding-bottom: 30px;
+text-align: center;
+color: rgb(0, 0, 0);
+}
+.titleText{
+width: 400px;
+text-align: center;
+margin-top: 50px;
+font-weight: bold;
+font-size: 100px;
+}
+.startDescription{
+color: rgb(0, 0, 0);
+margin-top: 25px;
+margin-left: 550px;
+width: 400px;
+text-align: center;
+}
+
+.startDescriptionText{
+border-top-width: 5px;
+border-top-color: #f1b0aa;
+border-top-style: solid;
+padding: 30px;
+font-size: large;
+}
+
+.banner{
+background-image: url('/Pictures/backgroundStart.jpg');
+padding: 60px;
+text-align: center;
+color: black;
+height: 300px;
+font-size: 30px;
+}
+
+.bb{
+border-radius: 8px;
+background-color: #343a40;
+border: none;
+color: black;
+padding: 20px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+margin-left: 550px;
+font-size: 16px;
+margin: 4px 2px;
+}
+a{
+color: white;
+}
+
+a:hover{
+color: #adadad;
+}
+
+ul{
+list-style-type: disc;
 }
 
 .imgProgramm{
-  margin-left: 100px;
-  height: 400px;
+margin-left: 100px;
+height: 400px;
 }
 
 .titleBlog{
-  margin-left: 550px;
-  padding-bottom: 30px;
-  text-align: center;
-  color: rgb(0, 0, 0);
+margin-left: 550px;
+padding-bottom: 30px;
+text-align: center;
+color: rgb(0, 0, 0);
 }
 .titleBlogText{
-  width: 400px;
-  text-align: center;
+width: 400px;
+text-align: center;
 
-  font-weight: bold;
-  font-size: 100px;
+font-weight: bold;
+font-size: 100px;
 }
 
 .descriptionContact{
-  color: rgb(0, 0, 0);
-  margin-top: 50px;
-  margin-left: 550px;
-  width: 400px;
-  text-align: center;
+color: rgb(0, 0, 0);
+margin-top: 50px;
+margin-left: 550px;
+width: 400px;
+text-align: center;
 }
 .descriptionContactText{
-  margin-left: 100px;
-  padding: 30px;
-  font-size: large;
+margin-left: 100px;
+padding: 30px;
+font-size: large;
 }
 
 .aboutMea{
-  padding-top: 75px;
-  text-align: center;
+padding-top: 115px;
+text-align: center;
 }
 .aboutMe{
-  padding-top: 110px;
-  text-align: center;
+padding-top: 110px;
+margin-left: 50px;
+text-align: center;
 }
 .aboutMeText{
-  padding-top: 100px;
-  text-align: center;
+padding-top: 85px;
+text-align: center;
 }
 .artist{
-  height: 200px;
-  list-style-type: none;
-  margin-bottom: 10px;
+height: 200px;
+list-style-type: none;
+margin-bottom: 10px;
+}
+.album{
+height: 215px;
+list-style-type: none;
+margin-bottom: 10px;
+}
+.csJava{
+height: 130px;
+list-style-type: none;
+margin-bottom: 10px;
+}
+.programming{
+height: 100px;
+list-style-type: none;
+margin-bottom: 10px;
+}
+.htmlLogo{
+height: 95px;
+list-style-type: none;
+margin-bottom: 10px;
+}
+.cssLogo{
+height: 120px;
+list-style-type: none;
+margin-bottom: 10px;
+}
+.series{
+height: 200px;
+width: 150px;
+list-style-type: none;
+margin-bottom: 10px;
+}
+
+.split {
+height: 100%;
+width: 50%;
+position: fixed;
+padding-top: 20px;
+}
+
+.left {
+left: 0;
+background-image: url("/Pictures/backgroundStart.jpg");
+}
+
+
+.right {
+right: 0;
+}
+
+.centered {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+text-align: center;
+}
+
+.blog{
+margin-top: 75px;
+}
+
+.column {
+float: left;
+width: 50%;
+padding: 10px;
 }
